--- a/hello0.html
+++ b/hello0.html
@@ -4,7 +4,7 @@
         <title></title>
     </head>
     <body>
-        <h1> Basic</h1>
+        <h1 style=" color:blue;"> Basic</h1>
         <h2>welcome</h2>
         Hello, World
     </body>
